fix hero img on small devices - no scaling in height

--- a/css/queries.css
+++ b/css/queries.css
@@ -446,7 +446,7 @@
 
 	.hero-img-sideways {
 		position: absolute;
-		bottom: 275px;
+		bottom: 25%;
 		left: 60px;
 		min-width: 500px;
 		width: 500px;
@@ -511,7 +511,7 @@
 
 	.hero-img-sideways {
 		position: absolute;
-		bottom: 290px;
+		bottom: 23%;
 		left: 60px;
 		min-width: 500px;
 		width: 500px;
